# AgentProof

./: .editorconfig  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
agentproof/: __init__.py  errors.py  llm.py  machine.py  memory.py  state.py
agentproof/evals/: __init__.py  checks.py  ci_gate.py  datasets.py  harness.py  judges.py  results.py  scorecard.py
agentproof/steps/: __init__.py  model_call.py  prepare.py  routers.py  tool_exec.py
agentproof/tools/: __init__.py  executor.py  registry.py  transports.py
agentproof/trace/: __init__.py  __main__.py  recorder.py  records.py  replay.py  viewer.py
datasets/: researcher.jsonl
demo/: __init__.py
demo/researcher/: __init__.py  __main__.py  agent.py  evalsuite.py  golden.py
tests/: test_agent_steps.py  test_checks_v2.py  test_ci_gate.py  test_evals.py  test_executor.py  test_harness.py  test_judge.py  test_llm.py  test_machine.py  test_memory.py  test_react_loop.py  test_replay.py  test_researcher.py  test_scaffold.py  test_state.py  test_tools.py  test_trace.py  test_viewer.py
