[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentproof"
version = "0.1.0"
description = "An evaluation-first, from-scratch agent runtime with a trajectory flight recorder."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jahid Hasan" }]
keywords = ["ai-agents", "evaluation", "observability", "state-machine", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "anthropic>=0.40",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/HelloJahid/AgentProof"
Issues = "https://github.com/HelloJahid/AgentProof/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["agentproof*", "demo*"]

[tool.setuptools.package-data]
agentproof = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modern syntax)
    "B",   # bugbear (likely bugs)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
